# fheroes2

./: .gitignore  CMakeLists.txt  Makefile  README.md  changelog.txt  requirements.txt  vcpkg.json
docs/: DEVELOPMENT.md  PYTHON_SUPPORT.md  README.md  README_PSV.md  README_android.md  README_cmake.md  README_switch.md  TRANSLATION.md
docs/deployments/: WEB_DEPLOYMENT.md
files/lang/: compile_translations.py  complie_translations.py
python/: CMakeLists.txt  README.md  example.py  pyfheroes2.cpp
script/: setup_python_venv.py
script/homm2/: extract_homm2_resources_from_cd_image.sh
script/packaging/common/: fheroes2.metainfo.xml
script/tools/python/: setup_python_venv.py
src/engine/: network.cpp  network.h
src/fheroes2/: CMakeLists.txt
src/fheroes2/army/: army.cpp  army.h
src/fheroes2/battle/: battle_only.cpp
src/fheroes2/castle/: castle.cpp  castle_dialog.cpp
src/fheroes2/dialog/: dialog_selectscenario.cpp
src/fheroes2/game/: game.cpp  game_cheats.cpp  game_hotkeys.cpp  game_mainmenu.cpp  game_mode.h  game_newgame.cpp  game_over.cpp  game_over.h
src/fheroes2/heroes/: heroes.cpp  heroes_base.h  heroes_dialog.cpp  heroes_meeting.cpp
src/fheroes2/kingdom/: kingdom_overview.cpp
src/fheroes2/maps/: map_format_helper.cpp  map_format_info.h  maps.cpp  maps.h
src/fheroes2/system/: settings.cpp  settings.h
src/fheroes2/world/: world.cpp  world.h  world_loadmap.cpp
